<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Real Estate Manager</string>
    <string name="open_navigation_drawer">Open menu drawer</string>
    <string name="close_navigation_drawer">Close menu drawer</string>
    <string name="cant_get_location">Can\'t get current location</string>
    <string name="gps_network_not_enabled">Location is disabled, please enable location sharing to see your current position on the map</string>
    <string name="open_location_settings">Enable location sharing</string>
    <string name="ignore">Ignore</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="house">House</string>
    <string name="flat">Flat</string>
    <string name="duplex">Duplex</string>
    <string name="penthouse">Penthouse</string>
    <string name="villa">Villa</string>

    <string name="for_sale">For sale</string>
    <string name="sold">Sold</string>
    <string name="property_saved_successful">Property saved successfully !</string>
    <string name="empty_field">Please fill in this field !</string>
    <string name="click_to_select_a_date">Click to select a date</string>
    <string name="description_title">Description:</string>
    <string name="price_title">Price:</string>
    <string name="ic_dollar">$</string>
    <string name="number_of_bedrooms_title">Number of bedrooms:</string>
    <string name="edit_property_title">Edit property</string>
    <string name="add_property_title">Add a property</string>
    <string name="cover_image">Cover</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="please_select_a_date"><u>Please select a date !</u></string>
    <string name="cant_locate_property">Couldn\'t locate the property! Map may be inaccurate.</string>
    <string name="address_title">Address</string>
    <string name="main_informations_title">Main informations</string>
    <string name="pictures_title">Pictures</string>
    <string name="no_image_selected">No image has been selected</string>
    <string name="set_as_cover"><u>Set as cover</u></string>
    <string name="offline_mode_on">Offline mode</string>
    <string name="point_of_interests_title">Point of interests</string>
    <string name="on_the_market_since">"On the market since %s"</string>
    <string name="sold_since">"Sold since %s"</string>
    <string name="cant_save_property">Can\'t save property due to loss of internet connection!</string>
    <string name="edit_add_unavailable">Edit/Add property unavailable without internet connection</string>
    <string name="load_picture_unable">Unable to load picture due to loss of internet connection</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="map_unavailable">Map unavailable without internet connection</string>
    <string name="sqft">sqft</string>
    <string name="property_picture">property picture</string>
    <string name="city_region_or_postal_code">City, region or postal code</string>
    <string name="area_title">Area:</string>
    <string name="number_of_bathrooms_title">Number of bathrooms:</string>
    <string name="property_availability_title">Property availability</string>
    <string name="click_to_choose_a_date">Click to choose a date</string>
    <string name="dollar_value">"$ %s"</string>
    <string name="sqft_value">%d sqft</string>
    <string name="surface_title">Surface</string>
    <string name="country_title">Country:</string>
    <string name="ok_btn">OK</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="property_type_title">Property type:</string>
    <string name="description_title_no_dot">Description</string>
    <string name="reduce_map">REDUCE</string>
    <string name="number_of_rooms_title">Number of rooms:</string>
    <string name="internet_unavailable">"Internet unavailable!"</string>
    <string name="unknown_error">Unknown error</string>
    <string name="changes_saved">Changes saved successfully</string>
    <string name="touch_to_update">Touch to update</string>
    <string name="property_type_title_dialog">Property type</string>
    <string name="filter_search_description">Filter search</string>
    <string name="property_in_city">"%1$s in %2$s"</string>
    <string name="my_properties">My properties</string>
    <string name="agent_properties">"%s's properties"</string>
    <string name="agent_title">Agent</string>
    <string name="no_properties_in_db">No properties were found in the database. You can add one by clicking on the plus button below.</string>
    <string name="image_property_description">image property</string>
    <string name="poi_type_name">"%1$s: %2$s"</string>
    <string name="distance_format">"%sm away"</string>
    <string name="click_on_a_property_to_open_details">Click on a property\nto open details</string>
    <string name="add_a_property_title">Add a property</string>
    <string name="save_property_btn">Save property</string>
    <string name="app_logo">App logo</string>
    <string name="profile_picture">Profile picture</string>
    <string name="bed_icon">bed icon</string>
    <string name="bath_icon">bath icon</string>
    <string name="room_icon">room icon</string>
    <string name="delete_date">Delete date</string>
    <string name="google_logo">google logo</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="since">Since :</string>
    <string name="with_pictures">With pictures</string>
    <string name="at_least">at least:</string>
    <string name="pictures">pictures</string>
    <string name="close_to">Close to:</string>
    <string name="park">Park</string>
    <string name="store">Store</string>
    <string name="school">School</string>
    <string name="address">Address</string>
    <string name="street_n">Street n°:</string>
    <string name="apartment_n">Apartment n°:</string>
    <string name="street_name">Street name:</string>
    <string name="city">City:</string>
    <string name="postal_code">Postal code:</string>
    <string name="region">Region:</string>
    <string name="surface">Surface:</string>
    <string name="availability">Availability:</string>
    <string name="surface_icon">surface icon</string>
    <string name="set_map_fullscreen">set map fullscreen</string>
    <string name="delete_picture">delete picture</string>
    <string name="icon_separator_point_of_interest">icon separator point of interest</string>
    <string name="results_for">Results for properties:</string>
    <string name="reset_filter">RESET</string>
    <string name="search_title">Search</string>
    <string name="since_date">"since %s "</string>
    <string name="price_between">"From $%1$s and $%2$s - "</string>
    <string name="sqft_between">"From %1$d to %2$d sqft - "</string>
    <plurals name="with_x_pictures">
        <item quantity="one">"With at least %d picture -"</item>
        <item quantity="other">"With at least %d pictures - "</item>
    </plurals>
    <string name="close_to_poi">"Close to "</string>
    <!-- <plurals name="nbr_of_room_filter">"%d room(s) - "</plurals>-->
    <plurals name="nbr_of_room_filter">
        <item quantity="one">"%d room - "</item>
        <item quantity="other">"%d rooms - "</item>
    </plurals>
    <plurals name="nbr_of_bed_filter">
        <item quantity="one">"%d bedroom - "</item>
        <item quantity="other">"%d bedrooms - "</item>
    </plurals>
    <plurals name="nbr_of_bath_filter">
        <item quantity="one">"%d bathroom - "</item>
        <item quantity="other">"%d bathrooms - "</item>
    </plurals>
    <string name="no_properties_found_matching">No properties found matching</string>
    <string name="optional">(optional)</string>
    <string name="forgot_info_title">"Oops! You forgot to add some informations!"</string>
    <string name="fill_in_missing_fields">"Please fill in the fields "</string>
    <string name="in_address_page">"in Address page"</string>
    <string name="in_main_info_page">"in Main Informations page"</string>
    <string name="and">" and "</string>
    <string name="title_cant_locate_address">Error: Could not locate the address</string>
    <string name="edit_address_btn">Edit address</string>
    <string name="ignore_btn">Ignore</string>
    <string name="address_not_found">"The address entered doesn't match any location. You can either leave it that way* or check the address for any mistake.\n\n*The property won't be shown accurately on the map."</string>
    <string name="please_connect_to_internet">Please connect to the internet to log in</string>
    <string name="cant_add_property_offline">Can\'t add a property without internet connection</string>
    <!-- hints -->
    <string name="hint_street_number"><i>42</i></string>
    <string name="hint_apartment_number"><i>B</i></string>
    <string name="hint_street_name"><i>Sesame Street</i></string>
    <string name="hint_city"><i>New York City</i></string>
    <string name="hint_postal_code"><i>11000</i></string>
    <string name="hint_region"><i>Long Island</i></string>
    <string name="hint_country"><i>United States</i></string>
    <string name="description_hint"><i>Description</i></string>

    <string name="cannot_change_photo_offline">Can\'t change profile picture in offline mode</string>
    <string name="cannot_edit_username_offline">Can\'t edit username in offline mode</string>
    <string name="choose_from_gallery">Gallery</string>
    <string name="choose_from_photo">Camera</string>
    <string name="select_picture_from_gallery">Select picture from gallery</string>
    <string name="select_picture_from_camera">Select picture from camera</string>
    <string name="retake_photo">RETAKE</string>
    <string name="photo_taken_from_camera">Photo taken from camera</string>
    <string name="focus_on_my_position">Focus on my position</string>
    <string name="edit_this_property">Edit this property</string>
</resources>
