<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="propertyViewModel"
            type="com.sophieoc.realestatemanager.ui.property.PropertyViewModel" />
        <variable
            name="photo"
            type="com.sophieoc.realestatemanager.model.Photo" />
 </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picture_property"
            android:layout_width="@dimen/size_ic_property_edit"
            android:layout_height="@dimen/size_ic_property_edit"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            app:propertyImageUrl="@{photo}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_property_description" />

        <ImageView
            android:id="@+id/delete_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/translucent_light_top"
            app:srcCompat="@drawable/ic_sharp_delete_forever_24"
            app:tint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/picture_property"
            app:layout_constraintTop_toTopOf="@+id/picture_property"
            android:contentDescription="@string/delete_picture" />

        <TextView
            android:id="@+id/cover_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cover_image"
            app:layout_constraintStart_toStartOf="@+id/picture_description_input"
            app:layout_constraintTop_toTopOf="@+id/picture_property" />

        <EditText
            android:id="@+id/picture_description_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:padding="@dimen/margin_10"
            android:hint="@string/description_hint"
            android:text="@={photo.description}"
            android:imeOptions="flagNoExtractUi|flagNoEnterAction"
            android:background="@drawable/bkg_rectangle_grey"
            app:layout_constraintBottom_toBottomOf="@+id/picture_property"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/picture_property"
            app:layout_constraintTop_toTopOf="@+id/picture_property"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/set_as_cover_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/margin_10"
            android:paddingStart="0dp"
            android:paddingTop="@dimen/margin_5"
            android:paddingBottom="@dimen/margin_5"
            android:textColor="@color/colorSecondary"
            android:text="@string/set_as_cover"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/picture_property"
            app:layout_constraintStart_toStartOf="@+id/picture_description_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>