<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="propertyViewModel"
            type="com.sophieoc.realestatemanager.viewmodel.PropertyViewModel" />
    </data>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title_street_nbr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:text="@string/street_n"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/street_nbr_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_5"
                    android:background="@drawable/bkg_rectangle_grey"
                    android:cursorVisible="true"
                    android:imeOptions="flagNoExtractUi|flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="@dimen/margin_10"
                    android:text="@={propertyViewModel.property.address.streetNumber}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/title_street_nbr"
                    app:layout_constraintTop_toBottomOf="@+id/title_street_nbr"
                    tools:ignore="LabelFor">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/title_apartment_nbr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/apartment_n"
                    app:layout_constraintStart_toStartOf="@+id/title_street_nbr"
                    app:layout_constraintTop_toBottomOf="@+id/street_nbr_input" />

                <EditText
                    android:id="@+id/apartment_nbr_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bkg_rectangle_grey"
                    android:cursorVisible="true"
                    android:freezesText="true"
                    android:layout_marginTop="@dimen/margin_5"
                    android:imeOptions="flagNoExtractUi|flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:padding="@dimen/margin_10"
                    android:text="@={propertyViewModel.property.address.apartmentNumber}"
                    app:layout_constraintEnd_toEndOf="@+id/street_nbr_input"
                    app:layout_constraintStart_toStartOf="@+id/title_apartment_nbr"
                    app:layout_constraintTop_toBottomOf="@+id/title_apartment_nbr"
                    tools:ignore="LabelFor"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/title_street_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/street_name"
                    app:layout_constraintStart_toStartOf="@+id/title_apartment_nbr"
                    app:layout_constraintTop_toBottomOf="@+id/apartment_nbr_input" />

                <EditText
                    android:id="@+id/street_name_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bkg_rectangle_grey"
                    android:cursorVisible="true"
                    android:imeOptions="flagNoExtractUi|flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:layout_marginTop="@dimen/margin_5"
                    android:padding="@dimen/margin_10"
                    android:text="@={propertyViewModel.property.address.streetName}"
                    app:layout_constraintEnd_toEndOf="@+id/street_nbr_input"
                    app:layout_constraintStart_toStartOf="@+id/title_street_name"
                    app:layout_constraintTop_toBottomOf="@+id/title_street_name"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/title_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/city"
                    app:layout_constraintStart_toStartOf="@+id/title_street_name"
                    app:layout_constraintTop_toBottomOf="@+id/street_name_input" />

                <EditText
                    android:id="@+id/city_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bkg_rectangle_grey"
                    android:cursorVisible="true"
                    android:freezesText="true"
                    android:imeOptions="flagNoExtractUi|flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:layout_marginTop="@dimen/margin_5"
                    android:padding="@dimen/margin_10"
                    android:text="@={propertyViewModel.property.address.city}"
                    app:layout_constraintEnd_toEndOf="@+id/street_name_input"
                    app:layout_constraintStart_toStartOf="@+id/title_city"
                    app:layout_constraintTop_toBottomOf="@+id/title_city"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/title_postal_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/postal_code"
                    app:layout_constraintStart_toStartOf="@+id/title_city"
                    app:layout_constraintTop_toBottomOf="@+id/city_input" />

                <EditText
                    android:id="@+id/postal_code_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bkg_rectangle_grey"
                    android:cursorVisible="true"
                    android:imeOptions="flagNoExtractUi|flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginTop="@dimen/margin_5"
                    android:padding="@dimen/margin_10"
                    android:text="@={propertyViewModel.property.address.postalCode}"
                    app:layout_constraintEnd_toEndOf="@+id/city_input"
                    app:layout_constraintStart_toStartOf="@+id/title_postal_code"
                    app:layout_constraintTop_toBottomOf="@+id/title_postal_code"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/title_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/region"
                    app:layout_constraintStart_toStartOf="@+id/title_postal_code"
                    app:layout_constraintTop_toBottomOf="@+id/postal_code_input" />

                <EditText
                    android:id="@+id/region_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bkg_rectangle_grey"
                    android:cursorVisible="true"
                    android:imeOptions="flagNoExtractUi|flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/margin_5"
                    android:padding="@dimen/margin_10"
                    android:text="@={propertyViewModel.property.address.region}"
                    app:layout_constraintEnd_toEndOf="@+id/postal_code_input"
                    app:layout_constraintStart_toStartOf="@+id/title_region"
                    app:layout_constraintTop_toBottomOf="@+id/title_region"
                    tools:ignore="LabelFor" />


                <TextView
                    android:id="@+id/title_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/country_title"
                    app:layout_constraintStart_toStartOf="@+id/title_region"
                    app:layout_constraintTop_toBottomOf="@+id/region_input" />

                <EditText
                    android:id="@+id/country_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bkg_rectangle_grey"
                    android:cursorVisible="true"
                    android:imeOptions="flagNoExtractUi|flagNoEnterAction"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:layout_marginTop="@dimen/margin_5"
                    android:padding="@dimen/margin_10"
                    android:text="@={propertyViewModel.property.address.country}"
                    app:layout_constraintEnd_toEndOf="@+id/region_input"
                    app:layout_constraintStart_toStartOf="@+id/title_country"
                    app:layout_constraintTop_toBottomOf="@+id/title_country"
                    tools:ignore="LabelFor" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</layout>